assets/css/main.css
body {
    font-family: Arial;
    color: #fff;
    background-color: #5c317c;
}

#rouletteLayoutDiv {
    position: absolute;
    z-index: 10;
}
#totalsTitleDiv {
    top: 0px;
    left: 0px;
    width: 800px;
    height: 57px;
}
#winLossTitleDiv {
    top: 425px;
    left: 0px;
    width: 800px;
    height: 30px;
}
#equityTitleDiv {
    top: 575px;
    left: 0px;
    width: 800px;
    height: 30px;
}
#configurationDiv {
    position: absolute;
    z-index: 11;
    top: 800px;
    left: 50px;
    width: 500px;
    height: 100px;
    display: none;
}
#betInfoDiv {
    position: absolute;
    z-index: 30;
    left: 810px;
    top: 60px;
    width: 150px;
    height: 200px;
    background-color: #8946bb;
}

#betInfoBetHeaderDiv {
    color: #fff;
    font-size: 16px;
    background-color: #3b0069;
    padding: 8px;
}
#betInfoBetPaysDiv {
    color: #fff;
    font-size: 12px;
    background-color: #7b41a6;
    padding: 5px;
}
#betInfoBetCurrentBetDiv {
    color: #fff;
    font-size: 12px;
    background-color: #7b41a6;
    padding: 5px;
}
#betInfoBetWinningPayDiv {
    color: #fff;
    font-size: 12px;
    background-color: #7b41a6;
    padding: 5px;
}

#totalBetAmountHeaderDiv {
    left: 105px;
    top: 2px;
}
#evHeaderDiv {
    left: 320px;
    top: 2px;
}
#compsHeaderDiv {
    left: 545px;
    top: 2px;
}

#totalBetAmountDiv {
    left: 105px;
    top: 28px;
}
#evDiv {
    left: 320px;
    top: 28px;
    color: #c00;
}
#compsDiv {
    left: 545px;
    top: 28px;
}

#wager-config-textarea {
    position: absolute;
    top: 0px;
    left: 10px;
    width: 700px;
    height: 100px;
}
#clearButton {
    position: absolute;
    z-index: 30;
    top: 15px;
    left: 755px;
}
#undoButton {
    position: absolute;
    z-index: 30;
    top: 15px;
    left: 710px;
}
#doubleButton {
    position: absolute;
    z-index: 30;
    top: 300px;
    left: 730px;
}
#halveButton {
    position: absolute;
    z-index: 30;
    top: 335px;
    left: 730px;
}

.chip-position-0 {
    left: 5px;
    top: 300px;
}
.chip-position-1 {
    left: 40px;
    top: 300px;
}
.chip-position-2 {
    left: 5px;
    top: 335px;
}
.chip-position-3 {
    left: 40px;
    top: 335px;
}
.chip-position-4 {
    left: 5px;
    top: 370px;
}
.chip-position-5 {
    left: 40px;
    top: 370px;
}

/* .vertical-center {
    margin: 0;
    position: absolute;
    top: 50%;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
} */
.totalAmountHeader {
    position: absolute;
    z-index: 22;
    width: 150px;
    height: 25px;
    color: #fff;
    font-size: 20px;
    font-weight: bold;
    text-align: center;
}
.totalAmount {
    position: absolute;
    z-index: 22;
    width: 150px;
    height: 25px;
    color: #fff;
    font-size: 20px;
    font-weight: bold;
    text-align: right;
    background-color: #26063e;
}
.title-bar {
    position: absolute;
    z-index: 20;

    display: flex;
    width: 50%;
    margin: auto;
    align-items:center;
    justify-content:center;

    background-color: #000;
    color: #fff;
    font-size: 20px;
    font-weight: bold;
    text-align: center;
}
.chip-selectable {
    position: absolute;
    z-index: 20;
}
.chip {
    z-index: 20;
    width: 30px;
    height: 30px;
}
.chip-bet {
    position: absolute;
}
.chip-cover {
    position: absolute;
}
.chip-cover-hidden {
    display: none;
}
.chip-inactive {

}
.chip-text {
    position: relative;
    z-index: 30;
    width: 30px;
    height: 30px;
    top: -23px;
    left: 0px;
    font-family: Arial;
    font-size: 14px;
    font-weight: bold;
    color: #000;
    text-align: center;
    background-color: rgba(255, 0, 0, 0.0001);
    -webkit-text-stroke-width: 0.5px;
    -webkit-text-stroke-color: #fff;
}

.highlight {
    position: absolute;
    z-index: 99;
    width: 52px;
    height: 76px;
    background-color: rgba(255, 255, 255, 0.3);
}
.highlight-0-0 {
    width: 40px;
    height: 228px;
    background-color: rgba(255, 255, 255, 0.3);
}
.highlight-0-0-cap {
    position: absolute;
    z-index: 88;
    width: 0;
    height: 0;
    top: 56px;
    left: 31px;
    border-right: 21px solid rgba(255, 255, 255, 0.3);
    border-top: 115px solid transparent;
    border-bottom: 115px solid transparent;
}
.highlight-hidden {
    display: none;
}

.spot-red {
    background-color: #c00;
}
.spot-black {
    background-color: #000;
}
.spot-green {
    background-color: rgb(0, 188, 0);
}
.amt-pos {
    color: rgb(0, 188, 0);
}
.amt-neg {
    color: #c00;
}
.amt-0 {
    color: #999;
    font-style: italic;
}

.equity {
    position: absolute;
    width: 52px;
    height: 30px;
    border: 1px #fff solid;
}
.equity div {
    margin: 7px 5px 2px 2px;
    text-align: right;
    font-size: 14px;
}
.win {
    background-image: url('/assets/img/bg-white-52x30.png');
    position: absolute;
    width: 52px;
    height: 30px;
    border: 1px #fff solid;
}
.win div {
    margin: 7px 5px 2px 2px;
    font-weight: bold;
    text-align: right;
    font-size: 14px;

    display: flex;
    width: 50%;
    margin: auto;
    align-items:center;
    justify-content:center;
}

.hotspot {
    position: absolute;
    opacity: 0.0001;
}
.hotspot-inside {
    width: 26px;
    height: 38px;
    z-index: 110;
}
.hotspot-outside-dozen {
    width: 208px;
    height: 52px;
    z-index: 100;
}
.hotspot-outside-column {
    width: 52px;
    height: 77px;
    z-index: 100;
}
.hotspot-outside-even-money {
    width: 104px;
    height: 52px;
    z-index: 100;
}
.hotspot-r {
    background-color: #f00;
}
.hotspot-g {
    background-color: #0f0;
}

